Bug 341902 - Bookmarks-> Subscribe to this page... is not aligned properly with Bookmark This Page... and Bookmark All Tabs..., patch by Mark Pilgrim, r=bugs.mano, a=beltzner

--- a/mozilla/browser/themes/winstripe/browser/browser.css
+++ b/mozilla/browser/themes/winstripe/browser/browser.css
@@ -155,7 +155,8 @@ menuitem.bookmark-item {
 
 /* ..... fix bookmarks padding issue ..... */
 
-#menu_BookmarksPopup menuitem { 
+#menu_BookmarksPopup menuitem,
+#menu_BookmarksPopup menu { 
 -moz-padding-start: 4px; 
 }
 
